refactor: 활성 지역 수 제한 없이 모두 조회하는 로직으로 변경